[package]
name = "siberau_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#SQL Related Dependencies
actix = "0.13.0"
actix-web = "4.2.1"
dotenv = "0.15.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres"] }

#Auth Related Dependencies
actix-web-httpauth = "0.8.1"
argon2 = "0.5.2"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"
actix-cors = "0.6.4"

#Filemanager Related Dependencies
tokio = { version = "1.28.2", features = ["full"] }
sysinfo = "0.29.2"
walkdir = "2.3.3"
fuzzy-matcher = "*"
rayon = "1.7.0"
dirs = "5.0.1"
notify = "6.0.1"
serde_bencode = "0.2.3"
zstd = "0.12.3"
lazy_static = "1.4.0"
open = "5.0.0"
thiserror = "1.0.40"
